[Payments] Unify the card number invalid string

BUG=695039
TEST=builds

Review-Url: https://codereview.chromium.org/2711543003
Cr-Commit-Position: refs/heads/master@{#452080}

Former-commit-id: baff1b62a218ccb26e1fd06f6a192bbabc937ee1